# src/routes/v1/permissions.routes.js
@@ -1,9 +1,10 @@
 import { Router } from 'express';
 import PermissionController from '../../controllers/PermissionController';
+import { can } from '../../middlewares/auth';
 
 const permissionRoutes = new Router();
 
-permissionRoutes.post('/permissions', PermissionController.create);
+permissionRoutes.post('/permissions', can(['PERMISSION_WRITE']), PermissionController.create);
 permissionRoutes.get('/permissions', PermissionController.index);
 
 export default permissionRoutes;
