# src/routes/v1/users.routes.js
@@ -1,12 +1,11 @@
 import { Router } from 'express';
 import UserController from '../../controllers/UserController';
-import helloWorld from '../../middlewares';
-import auth from '../../middlewares/auth';
+import { can } from '../../middlewares/auth';
 
 const userRoutes = new Router();
 
 userRoutes.post('/users', UserController.create);
 userRoutes.post('/session', UserController.session);
-userRoutes.get('/users', UserController.index);
+userRoutes.get('/users', can(['PERMISSION_READ']), UserController.index);
 
 export default userRoutes;
